--- a/scss/module/_calculator.scss
+++ b/scss/module/_calculator.scss
@@ -86,6 +86,7 @@ color:$blue;
   span{
     @include oswald;
     font-size:2.286em;
+    line-height: 1.604;
    }
   
 }
